Add css styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sytle.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-<script src="/app.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="sytle.css" />
+    <title>Guess a number</title>
+  </head>
+  <body>
+    <h1 class="title">Guess a number 1-10</h1>
+
+    <div class="container">
+      <input class="input" type="number" max="10" min="1" />
+      <button class="submitBtn">Guess</button>
+    </div>
+    <div class="text"></div>
+    <button class="refreshBtn" onclick="window.location.reload()">
+      Play Again
+    </button>
+  </body>
+  <script src="/app.js"></script>
 </html>
